--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/hooks": "^1.0.1",
     "@chakra-ui/icons": "^1.0.1",
     "@chakra-ui/react": "^1.0.3",
     "@emotion/react": "^11.1.2",
