--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^8.2.0",
     "framer-motion": "^2.9.5",
     "next": "10.0.3",
+    "pdfjs-dist": "^2.5.207",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-pdf": "^5.1.0"
