--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "firebase": "^8.2.0",
     "framer-motion": "^2.9.5",
     "next": "10.0.3",
-    "pdfjs-dist": "^2.5.207",
     "react": "17.0.1",
     "react-device-detect": "^1.15.0",
-    "react-dom": "17.0.1",
-    "react-pdf": "^5.1.0"
+    "react-dom": "17.0.1"
   }
 }
