--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "@chakra-ui/react": "^1.0.3",
     "@emotion/react": "^11.1.2",
     "@emotion/styled": "^11.0.0",
+    "firebase": "^8.2.8",
     "framer-motion": "^2.9.5",
     "next": "10.0.3",
-    "firebase": "^8.2.8",
     "prettier": "^2.2.1",
     "react": "17.0.1",
-    "react-device-detect": "^1.15.0",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0"
   }
 }
