--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "10.0.3",
     "prettier": "^2.2.1",
     "react": "17.0.1",
+    "react-device-detect": "^1.17.0",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0"
   }
